--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "hawkelele/database",
     "description": "Database abstraction utilities, based upon Doctrine/DBAL",
+    "type": "package",
     "version": "1.0.0",
     "autoload": {
         "psr-4": {
