--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,17 @@
     "description": "Database abstraction utilities, based upon Doctrine/DBAL",
     "type": "package",
     "version": "1.0.0",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Hawkelele\\Database\\": "src"
         }
     },
     "require": {
-        "php": "^7.3",
+        "php": "^8",
         "doctrine/dbal": "^3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10"
     }
 }
